<resources>
    <string name="app_name">HealthMed</string>
    <string name="login">LOGIN</string>
    <string name="name">EMAIL ID</string>
    <string name="pass">PASSWORD</string>
    <string name="sub">SUBMIT</string>
    <string name="wel">WELCOME</string>
    <string name="book">BOOKING</string>
    <string name="pat">PATIENT NAME</string>
    <string name="age">AGE</string>
    <string name="diesease">DIESEASE</string>
    <string name="appdate">APPOINTMENT DATE</string>
    <string name="t1">10AM - 11AM</string>
    <string name="t2">1PM - 2PM</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_nav_home">nav_home</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_contactus">contactus</string>
    <string name="title_activity_profile">profile</string>
</resources>
